Almost finished up with vanilla JS and CSS slider. Just need to fix alignment issue on the bottom of the page where the icons are located. They arent of center slightly when the left and right slides are the current slide. Pretty sure this is an issue with the JS logic. Will work on this tomorrow.

--- a/css/style.css
+++ b/css/style.css
@@ -169,36 +169,65 @@ WAS THE CODE USED TO RECREATE THE PIXELATED LOOK IN THE BACKGROUND AND MANILA FO
     font-size: 4rem; }
 
 .slider {
-  padding: 1rem;
   flex: 0 0 80%;
-  justify-items: center;
+  overflow: visible;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
   align-items: center; }
-  .slider__list {
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 4rem;
-    align-items: center;
+  .slider__container {
+    display: flex;
+    justify-content: center;
     width: 100%;
-    height: 100%; }
+    transition: all 0.2s; }
   .slider__item {
-    transition: all 0.2s;
-    width: 500px;
-    height: calc(50rem / (16 / 9)); }
+    position: relative;
+    padding: 0 2rem;
+    flex: 1 0 auto;
+    width: 50rem;
+    height: calc( (50rem - 4rem) / (16 / 9)); }
+    .slider__item.active > .img-overlay {
+      display: none; }
     .slider__item.inactive-left {
-      background-image: linear-gradient(90deg, white 50%, rgba(255, 255, 255, 0.75) 62.5%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0.25) 87.5%, rgba(255, 255, 255, 0) 100%), url(../../assets/crypto-project-bw-wide.jpeg);
-      filter: opacity(70%);
-      background-size: cover; }
+      opacity: 70%; }
+      .slider__item.inactive-left > .img-overlay {
+        background-image: linear-gradient(90deg, white 50%, rgba(255, 255, 255, 0.75) 62.5%, rgba(255, 255, 255, 0.5) 75%, rgba(255, 255, 255, 0.25) 87.5%, rgba(255, 255, 255, 0) 100%); }
     .slider__item.inactive-right {
-      background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 12.5%, rgba(255, 255, 255, 0.5) 25%, rgba(255, 255, 255, 0.75) 37.5%, white 50%), url(../../assets/crypto-project-bw-wide.jpeg);
-      filter: opacity(70%);
-      background-size: cover; }
-    .slider__item.active {
-      background-image: url(../../assets/crypto-project-bw-wide.jpeg);
-      background-size: cover; }
+      opacity: 70%; }
+      .slider__item.inactive-right > .img-overlay {
+        background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 12.5%, rgba(255, 255, 255, 0.5) 25%, rgba(255, 255, 255, 0.75) 37.5%, white 50%); }
   .slider__img {
-    background-image: url(../../assets/crypto-project-bw-wide.jpeg);
-    background-size: cover; }
+    z-index: 0;
+    position: relative;
+    max-width: 100%;
+    height: auto; }
+  .slider__project-details {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 46rem;
+    height: 10rem;
+    position: absolute;
+    z-index: 2;
+    bottom: 7%;
+    left: 50%;
+    transform: translateX(-50%); }
+    .slider__project-details i {
+      color: transparent;
+      text-shadow: 0 0 2px #000;
+      font-size: 6rem; }
+    .slider__project-details.right-active {
+      transform: translateX(calc(-50% - 1rem)); }
+    .slider__project-details.left-active {
+      transform: translateX(calc(-50% + 1rem)); }
+
+.img-overlay {
+  z-index: 3;
+  position: absolute;
+  left: 2rem;
+  height: 100%;
+  width: calc( 100% - 4rem); }
 
 .tab-nav {
   background-color: transparent;
@@ -246,7 +275,7 @@ WAS THE CODE USED TO RECREATE THE PIXELATED LOOK IN THE BACKGROUND AND MANILA FO
   text-shadow: 0 0 2px #000; }
   .summary__heading-container {
     height: fit-content;
-    margin: 3rem 0;
+    margin: 5rem 0 3rem 0;
     margin-left: 2rem; }
   .summary__heading {
     transform: scale(0.93, 1.3); }
