--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -2,3 +2,34 @@
 	color: transparent;
 	text-shadow: 0 0 2px #000;
 }
+
+@mixin inactive-left-image($image) {
+	background-image: linear-gradient(
+			90deg,
+			rgba(white, 1) 50%,
+			rgba(white, 0.75) 62.5%,
+			rgba(white, 0.5) 75%,
+			rgba(white, 0.25) 87.5%,
+			rgba(white, 0) 100%
+		),
+		$image;
+	filter: opacity(70%);
+}
+
+@mixin inactive-right-image($image) {
+	background-image: linear-gradient(
+			90deg,
+			rgba(white, 0) 0%,
+			rgba(white, 0.25) 12.5%,
+			rgba(white, 0.5) 25%,
+			rgba(white, 0.75) 37.5%,
+			rgba(white, 1) 50%
+		),
+		$image;
+	filter: opacity(70%);
+}
+
+@mixin active-image($image) {
+	background-image: $image;
+	background-size: cover;
+}
