--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -21,3 +21,6 @@ $container-background-dark: #c8be9b;
 $backgound-padding: 8rem;
 $content-full-bleed-col-w: 4rem;
 $tab-nav-width: 5rem;
+
+$portfolio-img-width: 50rem;
+$portfolio-img-padding: 4rem;
