--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -16,7 +16,7 @@
 
 	&__heading-container {
 		height: fit-content;
-		margin: 3rem 0;
+		margin: 5rem 0 3rem 0;
 		margin-left: 2rem;
 	}
 
